toggle-master-k8s/k8s/02-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: toggle-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: 339712930081.dkr.ecr.us-east-1.amazonaws.com/toggle-master-auth:latest
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: toggle-app
spec:
  ports:
  - port: 8001
    targetPort: 8001
  selector:
    app: auth-service
