toggle-master-k8s/k8s/03-flag-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flag-service
  namespace: toggle-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flag-service
  template:
    metadata:
      labels:
        app: flag-service
    spec:
      containers:
      - name: flag-service
        image: 339712930081.dkr.ecr.us-east-1.amazonaws.com/toggle-master-flag:latest
        ports:
        - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: flag-service
  namespace: toggle-app
spec:
  ports:
  - port: 8002
    targetPort: 8002
  selector:
    app: flag-service
