toggle-master-k8s/k8s/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: toggle-app
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 8001
      - path: /flags
        pathType: Prefix
        backend:
          service:
            name: flag-service
            port:
              number: 8002
      - path: /targeting
        pathType: Prefix
        backend:
          service:
            name: targeting-service
            port:
              number: 8003
      - path: /evaluation
        pathType: Prefix
        backend:
          service:
            name: evaluation-service
            port:
              number: 8004
